Update Calculation of root(digit_by_digit).html

--- a/Calculation of root(digit_by_digit).html
+++ b/Calculation of root(digit_by_digit).html
@@ -1,5 +1,5 @@
 <script language=javascript>
-  var p = prompt("Please enter a number(integer and float)", "2")
+  var p = prompt("Please enter a number(integer or float)", "2")
   var i, rm, lf=0, pnt, n, tn=1, s=1;
 
   for(i=1 ; ; i++){
